--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
-# Финално изчистена версия на about.html без никакви вътрешни Python-коментари
-about_html_clean = '''<!DOCTYPE html>
+# Повтаряме напълно изчистена версия на about.html – без коментари, само HTML
+about_html_final_clean = '''<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -105,9 +105,9 @@ about_html_clean = '''<!DOCTYPE html>
 </html>
 '''
 
-# Записваме чистия HTML файл
-file_path_about_clean = "/mnt/data/about.html"
-with open(file_path_about_clean, "w", encoding="utf-8") as f:
-    f.write(about_html_clean)
+# Записваме финалния чист HTML файл
+file_path_about_final_clean = "/mnt/data/about.html"
+with open(file_path_about_final_clean, "w", encoding="utf-8") as f:
+    f.write(about_html_final_clean)
 
-file_path_about_clean
+file_path_about_final_clean
