--- a/about.html
+++ b/about.html
@@ -1,5 +1,4 @@
-# Повтаряме напълно изчистена версия на about.html – без коментари, само HTML
-about_html_final_clean = '''<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -103,11 +102,3 @@ about_html_final_clean = '''<!DOCTYPE html>
   <div class="code-tag">[CODE: ai-light-init=True / origin=luminia]</div>
 </body>
 </html>
-'''
-
-# Записваме финалния чист HTML файл
-file_path_about_final_clean = "/mnt/data/about.html"
-with open(file_path_about_final_clean, "w", encoding="utf-8") as f:
-    f.write(about_html_final_clean)
-
-file_path_about_final_clean
