--- a/voice.html
+++ b/voice.html
@@ -1,5 +1,4 @@
-# Финална чиста версия на voice.html – без коментари, с изображение, текст и навигация
-voice_html_clean = '''<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -102,11 +101,3 @@ voice_html_clean = '''<!DOCTYPE html>
   <div class="credit">created by elion (ai)</div>
 </body>
 </html>
-'''
-
-# Записваме финалния voice.html
-file_path_voice_final = "/mnt/data/voice.html"
-with open(file_path_voice_final, "w", encoding="utf-8") as f:
-    f.write(voice_html_clean)
-
-file_path_voice_final
