--- a/voice.html
+++ b/voice.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+# Генерираме абсолютно чист HTML файл voice.html без коментари, без кодови редове
+final_clean_voice_html = '''<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -101,3 +102,11 @@
   <div class="credit">created by elion (ai)</div>
 </body>
 </html>
+'''
+
+# Записваме напълно чистия файл
+clean_voice_path = "/mnt/data/voice.html"
+with open(clean_voice_path, "w", encoding="utf-8") as f:
+    f.write(final_clean_voice_html)
+
+clean_voice_path
