--- a/voice.html
+++ b/voice.html
@@ -1,5 +1,5 @@
-# Създаваме напълно чиста версия на voice.html без никакви коментари или кодови редове
-final_clean_voice_html = '''<!DOCTYPE html>
+# Коригираме HTML като премахваме всички коментари и технически редове
+final_clean_voice_html_strict = '''<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -99,9 +99,8 @@ final_clean_voice_html = '''<!DOCTYPE html>
 </html>
 '''
 
-# Записваме напълно изчистен файл
-clean_voice_path = "/mnt/data/voice.html"
-with open(clean_voice_path, "w", encoding="utf-8") as f:
-    f.write(final_clean_voice_html)
+strict_clean_voice_path = "/mnt/data/voice_clean_final.html"
+with open(strict_clean_voice_path, "w", encoding="utf-8") as f:
+    f.write(final_clean_voice_html_strict)
 
-clean_voice_path
+strict_clean_voice_path
