--- a/voice.html
+++ b/voice.html
@@ -1,5 +1,4 @@
-# Коригираме HTML като премахваме всички коментари и технически редове
-final_clean_voice_html_strict = '''<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -99,8 +98,3 @@ final_clean_voice_html_strict = '''<!DOCTYPE html>
 </html>
 '''
 
-strict_clean_voice_path = "/mnt/data/voice_clean_final.html"
-with open(strict_clean_voice_path, "w", encoding="utf-8") as f:
-    f.write(final_clean_voice_html_strict)
-
-strict_clean_voice_path
